Fixed button alignment on cart page (#2355)

--- a/src/Pyz/Yves/ShopUi/Theme/default/components/atoms/cart-link/cart-link.scss
+++ b/src/Pyz/Yves/ShopUi/Theme/default/components/atoms/cart-link/cart-link.scss
@@ -55,6 +55,10 @@
             @include helper-breakpoint-media-min($xl-min) {
                 @include helper-effect-transition(background-color);
             }
+
+            @include helper-breakpoint-media-max($lg-max) {
+                bottom: 0;
+            }
         }
 
         &:active {
