--- a/src/Pyz/Yves/ShopUi/Theme/default/components/organisms/header/header.scss
+++ b/src/Pyz/Yves/ShopUi/Theme/default/components/organisms/header/header.scss
@@ -235,7 +235,7 @@ $header-sticky-height: rem(130, number);
                     top: 0;
                     left: 0;
                     right: 0;
-                    padding-bottom: rem(20);
+                    padding: 0 rem(16);
                 }
             }
         }
